adjust email template

--- a/ws_event_page/templates/emails/kdd_certificate_notification.html
+++ b/ws_event_page/templates/emails/kdd_certificate_notification.html
@@ -5,24 +5,26 @@
     <h1 style="text-align: center">
       <span style="color: #f05023">CHỨNG NHẬN THAM GIA</span>
       <br />
-      <span style="color: #172a52">BUỔI TRẢI NGHIỆM MẦM NON</span>
+      <span style="color: #172a52"
+        >BUỔI TRẢI NGHIỆM DÀNH CHO HỌC SINH MẦM NON</span
+      >
       <br />
-      <span style="color: #f5aa1e">WELLSPRING SAIGON</span>
+      <span style="color: #f5aa1e">“Little WISers, Big Wonders”</span>
     </h1>
     <h3 style="text-align: center; color: #3b6dae">
-      KINDERGARTEN DEMO DAY CERTIFICATE OF PARTICIPATION
+      KINDERGARTEN EXPERIENCE DAY CERTIFICATE OF PARTICIPATION
     </h3>
   </div>
 
   <div style="margin: 30px auto; max-width: 600px; text-align: left">
     <p style="font-size: 16px; line-height: 1.6">
-      Xin chào Quý phụ huynh
-      <strong style="color: #f05023">{{parent_name}}</strong>,
+      Kính gửi Quý Phụ huynh em
+      <strong style="color: #f05023">{{student_name}}</strong>,
     </p>
     <p style="font-size: 16px; line-height: 1.6">
       <em
-        >Dear parent
-        <strong style="color: #f05023">{{parent_name}}</strong>,</em
+        >Dear parent of
+        <strong style="color: #f05023">{{student_name}}</strong>,</em
       >
     </p>
 
@@ -35,7 +37,7 @@
       <em
         >Thank you for registering
         <strong style="color: #3b6dae">{{student_name}}</strong> for the
-        Kindergarten Demo Day at Wellspring Saigon.</em
+        Kindergarten Experience Day at Wellspring Saigon.</em
       >
     </p>
 
@@ -103,22 +105,11 @@
             font-weight: bold;
           "
         >
-          Sự kiện | <em>Event</em>:
-        </td>
-        <td style="border-color: #3b6dae; padding: 10px">{{event_title}}</td>
-      </tr>
-      <tr>
-        <td
-          style="
-            border-color: #3b6dae;
-            text-align: right;
-            padding: 10px;
-            font-weight: bold;
-          "
-        >
           Phụ huynh | <em>Parent</em>:
         </td>
-        <td style="border-color: #3b6dae; padding: 10px">{{parent_name}}</td>
+        <td style="border-color: #3b6dae; padding: 10px">
+          Mr/Ms. {{parent_name}}
+        </td>
       </tr>
       <tr>
         <td
@@ -175,7 +166,8 @@
   <!-- Footer -->
   <div style="margin: 30px auto; max-width: 600px; text-align: left">
     <p style="font-size: 16px; line-height: 1.6">
-      Nếu bạn có bất kỳ câu hỏi nào, vui lòng liên hệ với chúng tôi.
+      Nếu Phụ huynh có bất kỳ câu hỏi hoặc thắc mắc nào, vui lòng liên hệ với
+      chúng tôi để được hỗ trợ.
     </p>
     <p style="font-size: 16px; line-height: 1.6">
       <em>If you have any questions, please feel free to contact us.</em>
@@ -183,7 +175,6 @@
 
     <p style="font-size: 16px; line-height: 1.6; margin-top: 20px">
       Trân trọng, <br />
-      <strong style="color: #3b6dae">Wellspring Saigon</strong>
     </p>
     <p style="font-size: 16px; line-height: 1.6">
       <em
@@ -191,6 +182,8 @@
         <strong style="color: #3b6dae">Wellspring Saigon</strong></em
       >
     </p>
+    <p>WSSG Admissions Department</p>
+    <p>admissions@wellspringsaigon.edu.vn | M: (84) 0937 099 229</p>
   </div>
 </div>
 
