KDD: edit email template

--- a/ws_event_page/templates/emails/kdd_certificate_notification.html
+++ b/ws_event_page/templates/emails/kdd_certificate_notification.html
@@ -29,7 +29,7 @@
     </p>
 
     <p style="font-size: 16px; line-height: 1.6; margin-top: 20px">
-      Cảm ơn bạn đã đăng ký cho bé
+      Cảm ơn Quý Phụ huynh đã đăng ký cho bé
       <strong style="color: #3b6dae">{{student_name}}</strong> tham gia buổi
       trải nghiệm tại Wellspring Saigon.
     </p>
@@ -42,8 +42,8 @@
     </p>
 
     <p style="font-size: 16px; line-height: 1.6; margin-top: 20px">
-      Chứng nhận tham gia của bé đã được tạo và sẵn sàng để xem. Vui lòng nhấn
-      vào nút bên dưới để xem và tải chứng nhận.
+      Chứng nhận tham gia của bé đã được tạo và sẵn sàng để xem. Quý Phụ huynh
+      vui lòng nhấn vào nút bên dưới để xem và tải chứng nhận.
     </p>
     <p style="font-size: 16px; line-height: 1.6">
       <em
@@ -143,34 +143,32 @@
       <strong style="color: #f5aa1e"
         >Lưu ý quan trọng | Important Notes:</strong
       >
+      Mỗi bé sẽ có một chứng nhận duy nhất cho sự kiện này. <br />
+      <em>Each child will have one unique certificate for this event.</em>
     </p>
-    <ul style="font-size: 14px; line-height: 1.6; margin-top: 10px">
-      <li>
-        Vui lòng lưu email này để truy cập chứng nhận sau này. <br />
-        <em>Please save this email for future access to the certificate.</em>
-      </li>
-      <li>
-        Nếu bạn cần gửi lại link chứng nhận, vui lòng liên hệ với trường. <br />
-        <em
-          >If you need to resend the certificate link, please contact the
-          school.</em
-        >
-      </li>
-      <li>
-        Mỗi bé sẽ có một chứng nhận duy nhất cho sự kiện này. <br />
-        <em>Each child will have one unique certificate for this event.</em>
-      </li>
-    </ul>
   </div>
 
   <!-- Footer -->
   <div style="margin: 30px auto; max-width: 600px; text-align: left">
     <p style="font-size: 16px; line-height: 1.6">
-      Nếu Phụ huynh có bất kỳ câu hỏi hoặc thắc mắc nào, vui lòng liên hệ với
-      chúng tôi để được hỗ trợ.
+      Cảm ơn các bé đã tham gia ngày trải nghiệm đáng nhớ tại Wellspring Saigon!
+      💖 Mong sớm gặp lại các bé trong những chương trình thú vị tiếp theo!
     </p>
     <p style="font-size: 16px; line-height: 1.6">
-      <em>If you have any questions, please feel free to contact us.</em>
+      <em
+        >Thank you for joining the memorable Kindergarten Demo Day at Wellspring
+        Saigon! 💖 We look forward to welcoming you back for more exciting
+        activities in the future.</em
+      >
+    </p>
+
+    <br />
+
+    <p style="font-size: 16px; line-height: 1.6">
+      Chúc các con luôn mạnh khỏe và có thật nhiều niềm vui mỗi ngày đến trường!
+    </p>
+    <p style="font-size: 16px; line-height: 1.6">
+      <em>Wishing all students good health and many joyful days at school.</em>
     </p>
 
     <p style="font-size: 16px; line-height: 1.6; margin-top: 20px">
@@ -184,6 +182,12 @@
     </p>
     <p>WSSG Admissions Department</p>
     <p>admissions@wellspringsaigon.edu.vn | M: (84) 0937 099 229</p>
+    <p><strong>Wellspring International Bilingual Schools</strong></p>
+    <p>
+      <a href="https://www.wellspring.edu.vn" target="_blank"
+        >www.wellspring.edu.vn</a
+      >
+    </p>
   </div>
 </div>
 
